@@ -24,6 +24,9 @@ Version 2.2
   * NCAR command language (PR#536)
   * Extempore (PR#530)
   * Cap'n Proto (PR#595)
+  * Whiley (PR#573)
+  * Monte (PR#592)
+  * Crystal (PR#576)
 
 - Added `lexers.find_lexer_class_by_name()`. (#1203)
 
